crates/pg_syntax/tests/snapshots/postgres_regress/guc@204.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: set default_with_oids to f;
---
VariableSetStmt@0..27
  Set@0..3 "set"
  Whitespace@3..4 " "
  Ident@4..21 "default_with_oids"
  Whitespace@21..22 " "
  To@22..24 "to"
  Whitespace@24..25 " "
  AConst@25..26
    Ident@25..26 "f"
  Ascii59@26..27 ";"

