crates/pg_syntax/tests/snapshots/postgres_regress/guc@207.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_settings_get_flags('does_not_exist');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..28 "pg_settings_get_flags"
      Ascii40@28..29 "("
      AConst@29..45
        Sconst@29..45 "'does_not_exist'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

