crates/pg_syntax/tests/snapshots/postgres_regress/guc@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET vacuum_cost_delay TO 80.1;
---
VariableSetStmt@0..30
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..21 "vacuum_cost_delay"
  Whitespace@21..22 " "
  To@22..24 "TO"
  Whitespace@24..25 " "
  AConst@25..29
    Fconst@25..29 "80.1"
  Ascii59@29..30 ";"

