crates/pg_syntax/tests/snapshots/postgres_regress/guc@47.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SET vacuum_cost_delay TO '900us';"
---
VariableSetStmt@0..33
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..21 "vacuum_cost_delay"
  Whitespace@21..22 " "
  To@22..24 "TO"
  Whitespace@24..25 " "
  AConst@25..32
    Sconst@25..32 "'900us'"
  Ascii59@32..33 ";"

