crates/pg_syntax/tests/snapshots/postgres_regress/guc@52.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET vacuum_cost_delay TO 100;
---
VariableSetStmt@0..29
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..21 "vacuum_cost_delay"
  Whitespace@21..22 " "
  To@22..24 "TO"
  Whitespace@24..25 " "
  AConst@25..28
    Iconst@25..28 "100"
  Ascii59@28..29 ";"

