crates/pg_syntax/tests/snapshots/postgres_regress/guc@78.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '2006-08-13 12:34:56'::timestamptz;"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    TypeCast@7..41
      AConst@7..28
        Sconst@7..28 "'2006-08-13 12:34:56'"
      Typecast@28..30 "::"
      TypeName@30..41
        Ident@30..41 "timestamptz"
  Ascii59@41..42 ";"

