crates/pg_syntax/tests/snapshots/postgres_regress/hash_func@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT v as value, hash_array_extended(v, 0)::bit(32) as extended0\nFROM   (VALUES ('{0}'::money[])) x(v);"
---
SelectStmt@0..105
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..17
    ColumnRef@7..8
      Ident@7..8 "v"
    Whitespace@8..9 " "
    As@9..11 "as"
    Whitespace@11..12 " "
    ValueP@12..17 "value"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..66
    TypeCast@19..52
      FuncCall@19..43
        Ident@19..38 "hash_array_extended"
        Ascii40@38..39 "("
        ColumnRef@39..40
          Ident@39..40 "v"
        Ascii44@40..41 ","
        Whitespace@41..42 " "
        AConst@42..43
          Iconst@42..43 "0"
      Ascii41@43..44 ")"
      Typecast@44..46 "::"
      TypeName@46..52
        Bit@46..49 "bit"
        Ascii40@49..50 "("
        AConst@50..52
          Iconst@50..52 "32"
    Ascii41@52..53 ")"
    Whitespace@53..54 " "
    As@54..56 "as"
    Whitespace@56..57 " "
    Ident@57..66 "extended0"
  Newline@66..67 "\n"
  From@67..71 "FROM"
  Whitespace@71..74 "   "
  Ascii40@74..75 "("
  RangeSubselect@75..103
    SelectStmt@75..95
      Values@75..81 "VALUES"
      Whitespace@81..82 " "
      Ascii40@82..83 "("
      List@83..95
        TypeCast@83..95
          AConst@83..88
            Sconst@83..88 "'{0}'"
          Typecast@88..90 "::"
          TypeName@90..95
            Ident@90..95 "money"
    Ascii91@95..96 "["
    Ascii93@96..97 "]"
    Ascii41@97..98 ")"
    Ascii41@98..99 ")"
    Whitespace@99..100 " "
    Alias@100..103
      Ident@100..101 "x"
      Ascii40@101..102 "("
      Ident@102..103 "v"
  Ascii41@103..104 ")"
  Ascii59@104..105 ";"

