crates/pg_syntax/tests/snapshots/postgres_regress/hash_func@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TYPE mood AS ENUM ('sad', 'ok', 'happy');"
---
CreateEnumStmt@0..48
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  TypeP@7..11 "TYPE"
  Whitespace@11..12 " "
  Ident@12..16 "mood"
  Whitespace@16..17 " "
  As@17..19 "AS"
  Whitespace@19..20 " "
  EnumP@20..24 "ENUM"
  Whitespace@24..25 " "
  Ascii40@25..26 "("
  Sconst@26..31 "'sad'"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  Sconst@33..37 "'ok'"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  Sconst@39..46 "'happy'"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

