crates/pg_syntax/tests/snapshots/postgres_regress/hash_func@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TYPE hash_test_t1 AS (a int, b text);"
---
CompositeTypeStmt@0..44
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  TypeP@7..11 "TYPE"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "hash_test_t1"
  Whitespace@24..25 " "
  As@25..27 "AS"
  Whitespace@27..28 " "
  Ascii40@28..29 "("
  ColumnDef@29..34
    Ident@29..30 "a"
    Whitespace@30..31 " "
    TypeName@31..34
      IntP@31..34 "int"
  Ascii44@34..35 ","
  Whitespace@35..36 " "
  ColumnDef@36..42
    Ident@36..37 "b"
    Whitespace@37..38 " "
    TypeName@38..42
      TextP@38..42 "text"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

